--- a/static/css/main.css
+++ b/static/css/main.css
@@ -39,8 +39,8 @@ height:200px;
 padding:20px;
 }
 .product-thumb img{
-width:300px;
-height:400px;
+width:200px;
+height:300px;
 display:block;
 margin:auto;
 }
@@ -159,7 +159,7 @@ background-color: #cbc1d2;
 font-size:30px;
 color:#000;
 height:44px;
-overflow:hidden;
+overflow:visible;
 text-align:justify;
 font-weight:400;
 }
@@ -167,9 +167,9 @@ font-weight:400;
 font-size:15px;
 color:#000;
 height:44px;
-overflow:hidden;
+overflow:visible;
 text-align:justify;
-font-weight:400;
+font-weight:600;
 }
 .history h4{
 text-align:center;
