--- a/MainApp/templates/shop-page.html
+++ b/MainApp/templates/shop-page.html
@@ -23,78 +23,25 @@
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <di class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
                 <!-- Корзина -->
                 <li class="nav-item">
                     <a class="nav-link "
-                       href="#"
+                       href="http://127.0.0.1:8000/cart/"
                        data-bs-toggle="modal"
-                       data-bs-target="#modal-cart">
+                       data-bs-target="/cart">
                         <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512">
                             <path d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"/>
                         </svg>
                     </a>
                     <!-- Modal -->
-                    <div class="modal fade" id="modal-cart" tabindex="-1" aria-labelledby="exampleModalLabel"
-                         aria-hidden="true">
-                        <div class="modal-dialog modal-xl">
-                            <div class="modal-content">
-                                <div class="modal-header" style="background-color: #cbc1d2;">
-                                    <h5 class="modal-title" id="exampleModalLabel">Корзина</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                            aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    <!-- Список товаров в корзине-->
-                                    <table class="table">
-                                        <thead>
-                                        <tr>
-                                            <th scope="col"></th>
-                                            <th scope="col"></th>
-                                            <th scope="col">Описание</th>
-                                            <th scope="col">Кол-во</th>
-                                            <th scope="col">Цена</th>
-                                        </tr>
-                                        </thead>
-                                        <tbody>
-                                        <tr>
-                                            <th scope="row">1</th>
-                                            <td><img src="images/products/6309540193.webp" alt=""></td>
-                                            <td><a href="#">Кружка</a></td>
-                                            <td>1 шт</td>
-                                            <td>245р</td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row">2</th>
-                                            <td><img src="images/products/ложка.webp" alt=""></td>
-                                            <td><a href="#">Ложка</a></td>
-                                            <td>1 шт</td>
-                                            <td>175р</td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row">3</th>
-                                            <td><img src="images/products/6569613563.webp" alt=""></td>
-                                            <td><a href="#">Варенье</a></td>
-                                            <td>1 шт</td>
-                                            <td>175р</td>
-                                        </tr>
-                                        </tbody>
-                                    </table>
 
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" style="background-color: #cbc1d2;"
-                                            data-bs-dismiss="modal">Закрыть
-                                    </button>
-                                    <button type="button" class="btn btn-primary" style="background-color: #cbc1d2;">
-                                        Оплатить
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+
+
+
+
                 </li>
 
                 <!-- Профиль -->
@@ -121,7 +68,7 @@
                                 </div>
                                 <div class="modal-anketa">
                                     <div class="my-anketa">
-                                        <img src="images/ава.jpg" class="img-thumbnail" alt="">
+                                        <img src="/images/ава.jpg" class="img-thumbnail" alt="">
                                     </div>
                                     <div class="my-anketa-text">
                                         <p>Имя: {{ user.first_name }}</p>
@@ -135,34 +82,7 @@
                                                 <a href ="{% url 'logout' %}">Выйти</a>
 
                                     </div>
-                                    <div class="history">
-                                        <table class="table">
-                                            <thead>
-                                            <tr>
-                                                <h4>Мои заказы</h4>
-                                                <th scope="col">Товар</th>
-                                                <th scope="col">Стоимость</th>
-                                            </tr>
-                                            </thead>
-                                            <tbody>
-                                            <tr>
-                                                <td><img src="images/products/6309540193.webp" alt=""></td>
-                                                <td>245р</td>
 
-                                            </tr>
-                                            <tr>
-                                                <td><img src="images/products/ложка.webp" alt=""></td>
-                                                <td>175р</td>
-                                            </tr>
-                                            <tr>
-                                                <td><img src="images/products/носки.jpg" alt=""></td>
-                                                <td>245р</td>
-                                            </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-
-                                </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" style="background-color: #cbc1d2;"
                                             data-bs-dismiss="modal">Закрыть
