--- a/MainApp/templates/thx.html
+++ b/MainApp/templates/thx.html
@@ -1,37 +1,8 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-  <title>Корзина заказов</title>
-  <style>
-    table {
-      border-collapse: collapse;
-      width: 100%;
-
-    }
-
-    th, td {
-      text-align: left;
-      padding: 8px;
-    }
-
-    th {
-      background-color:#cbc1d2;
-    }
-
-    tr:nth-child(even) {
-      background-color: #f9f9f9;
-    }
-
-    .total {
-      font-weight: bold;
-    }
-    h1 {
-    text-align: center;
-
-    }
-  </style>
-</head>
-        <meta charset="utf-8">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
@@ -41,6 +12,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/main.css">
+    <title>ГАЙКАРРИЕС</title>
+
+</head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #cbc1d2;">
     <div class="container-fluid">
@@ -51,43 +25,22 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+
+
             </ul>
         </div>
     </div>
 </nav>
 
-  <h1>Корзина товаров</h1>
 
-
-  <table>
-    <tr>
-        <th>Товар</th>
-        <th>Название</th>
-        <th>Количество</th>
-        <th>Цена</th>
-        <th></th>
-    </tr>
-    {% for item in cart %}
-      <tr>
-        <td><img src="{{item.product.image.url}}" alt="" width = '100' height = '100'></td>
-        <td>{{item.product.name}}</td>
-        <td>{{item.quantity}} шт</td>
-        <td>{{item.product.cost|floatformat:2}}р</td>
-
-
-      </tr>
-    {% endfor %}
-    <tr class="total">
-      <td colspan="3">Всего:</td>
-        <td></td>
-        <span id = 'total_amount'><td>{{total_amount}}</td></span>
-    </tr>
-  </table>
-<div class="modal-footer">
-    <button type="button" class="btn btn-primary" style="background-color: #cbc1d2;" href = "{% url 'order_placed' %}">
-        <a href = "{% url 'order_placed' %}" style="text-decoration: none;">Оплатить</a>
-    </button>
-</div>
+<main class="mt-5 pt-4">
+    <div class="container dark-grey-text mt-5">
+        <div class="row wow fadeIn">
+            <div class="col-md-4 mb-4">
+                <h2 class="section_title">Заказ оформлен! Спасибо</h2>
+            </div>
+    </div>
+</main>
 
 
 <footer>
@@ -127,4 +80,6 @@
     </section>
 </footer>
 
+
+</body>
 </html>
